fix credits popup alignment

--- a/sass/template-picker.scss
+++ b/sass/template-picker.scss
@@ -711,7 +711,7 @@ $sidebar_width: 290px;
 				.srfm-tp-header-credits-popover {
 					position: absolute;
 					top: 55px;
-					right: 76px;
+					right: 69px;
 					display: flex;
 					flex-direction: column;
 					align-items: center;
